login, register basic

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "components/*": ["components/*"],
       "assets/*": ["assets/*"],
-      "layouts/*": ["layouts/*"]
+      "Layouts/*": ["Layouts/*"],
+      "services/*": ["services/*"]
     }
   }
 }
