--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 APP_DB=mongodb+srv://Hoaiphong59:Hoaiphong59000@easylearn.lbhvj.mongodb.net/EasyLearn?retryWrites=true&w=majority
 APP_SECRET=Hoaiphong59000
 APP_PORT=5000
+API_KEY_EMAIL_VERIFY=at_OvkROBox1h0gfz7RF29Lxl6RAGLd9
 TOKEN_EXPRIRES=604800
 CLOUDINARY_NAME=hoaiphong
 CLOUDINARY_API_KEY=262169198122175
