--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Hoai Phong",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
@@ -19,7 +20,8 @@
     "consola": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "email-mx-validator": "^1.0.4",
+    "email-existence": "^0.1.6",
+    "email-verifier": "^0.4.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.14.0",
