make api basic for auth, course, blog, profile

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -6,7 +6,7 @@
     "paths": {
       "components/*": ["components/*"],
       "assets/*": ["assets/*"],
-      "Layouts/*": ["Layouts/*"],
+      "layouts/*": ["layouts/*"],
       "services/*": ["services/*"]
     }
   }
