--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
     "history": "^5.2.0",
+    "http-proxy-middleware": "^2.0.4",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -32,6 +33,8 @@
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
@@ -68,6 +71,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
