--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,14 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
+    "devextreme": "21.2",
+    "devextreme-react": "21.2",
     "history": "^5.2.0",
     "http-proxy-middleware": "^2.0.4",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "interweave": "^12.9.0",
-    "jodit-react": "^1.1.17",
     "js-cookie": "^3.0.1",
     "luxon": "^2.3.0",
     "moment": "^2.29.1",
