--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "cloudinary": "^1.29.0",
     "config": "^3.3.7",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "normalize-url": "^5.3.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
