comment on course-video

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_DB=mongodb+srv://Hoaiphong59:Hoaiphong59000@easylearn.lbhvj.mongodb.net/EasyLearn?retryWrites=true&w=majority
+APP_DB_LOCALE=mongodb://localhost:27017/EasyLearn
 APP_SECRET=Hoaiphong59000
 APP_PORT=5000
 API_KEY_EMAIL_VERIFY=at_OvkROBox1h0gfz7RF29Lxl6RAGLd9
