--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^3.13.0",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -46,6 +48,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
+    "swiper": "^8.1.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
