--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "client",
+  "homepage": "https://easylearn.vercel.app",
+  "name": "easylearn",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
