--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://easylearn.vercel.app",
+  "homepage": "https://easy-learn.vercel.app/",
   "name": "easylearn",
   "version": "0.1.0",
   "private": true,
