--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://easy-learn.vercel.app/",
+  "homepage": "https://easy-learn.vercel.app",
   "name": "easylearn",
   "version": "0.1.0",
   "private": true,
@@ -75,5 +75,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:50000"
 }
