--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "normalize-url": "^5.3.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
